Fix flex alignment w/no avatar

--- a/css/less/cards/roomscore.less
+++ b/css/less/cards/roomscore.less
@@ -142,10 +142,10 @@
           border-radius: 0.35em;
         }
         .user {
-          position: relative;
-          top: 0.5em;
+          height: 4.75em;
 
           .name {
+            margin-top: 0.75em;
             font-size: 1.5em;
             font-weight: 600;
           }
